--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Montserrat:wght@300&display=swap" rel="stylesheet">
             <script src="https://kit.fontawesome.com/32fe158177.js" crossorigin="anonymous"></script>
+            <meta name="viewport" content="width=device-width" />
 
         </head>
         <body>
